--- a/BlagaUniversity/Views/Student/Details.cshtml
+++ b/BlagaUniversity/Views/Student/Details.cshtml
@@ -8,7 +8,7 @@
 
 <div>
     <h4>Student</h4>
-    <hr />
+    <hr/>
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.LastName)
@@ -34,9 +34,32 @@
             @Html.DisplayFor(model => model.EnrollmentDate)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Enrolments)
+        </dt>
+
+        <dd>
+            <table class="table">
+                <tr>
+                    <th>Course Title:</th>
+                    <th>Grade</th>
+                </tr>
+                @foreach (var item in Model.Enrolments)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(_ => item.Course.Title)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(_ => item.Grade)
+                        </td>
+                    </tr>
+                }
+            </table>
+        </dd>
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Edit", "Edit", new {id = Model.ID}) |
     @Html.ActionLink("Back to List", "Index")
 </p>
