--- a/BlagaUniversity/Views/Course/Delete.cshtml
+++ b/BlagaUniversity/Views/Course/Delete.cshtml
@@ -4,13 +4,21 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Course</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Course</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.CourseID)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CourseID)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.Department.Name)
         </dt>
@@ -37,7 +45,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
