--- a/BlagaUniversity/Views/Course/Details.cshtml
+++ b/BlagaUniversity/Views/Course/Details.cshtml
@@ -4,12 +4,20 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Course</h2>
 
 <div>
     <h4>Course</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.CourseID)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CourseID)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.Department.Name)
         </dt>
