--- a/BlagaUniversity/Views/Student/Index.cshtml
+++ b/BlagaUniversity/Views/Student/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model PagedList.IPagedList<BlagaUniversity.Models.Student>
-@using PagedList.Mvc;
+@using PagedList.Mvc
 
 <link href="~/Content/PagedList.css" rel="stylesheet" type="text/css"/>
 
